--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
-node_modules
-.vscode
-dist
-.parcel-cache
+# Node modules
+node_modules/
+
+# Parcel cache directory
+.parcel-cache/
+
+# Dist directory
+dist/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# IDE/Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
